--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,8 @@ footer {
     font-size: 10px;
 }
 
+@media only screen (max-width: 980px) {
+
 input {
     width: 100%;
 }
@@ -156,4 +158,13 @@ textarea {
     position: absolute;
     bottom: 20px;
 }
+
+}
+
+@media only screen (max-width: 768px) {
+
+
+}
+
+
 
